--- a/config.json
+++ b/config.json
@@ -35,7 +35,7 @@
     "LABEL_2": 2
   },
   "max_position_embeddings": 512,
-  "model_type": "bart",
+  "model_type": "marian",
   "normalize_before": false,
   "normalize_embedding": false,
   "num_beams": 6,
